<resources>
    <string name="app_name">ELT Wallet</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="one">one</string>
    <string name="two">two</string>
    <string name="please_signinto_accessyour_account">Please sign in to access your account</string>
    <string name="emailorname">Email/Mobile</string>
    <string name="remember_me">Remember me</string>
    <string name="forgetpassword">Forgot Password?</string>
    <string name="wewill_sendyou_linkto_logininstantly">We will send you a link to login immediately.</string>
    <string name="add_new_account">Add New Account</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="password">Please enter password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="alpha_numeric_eight_character">Enter atleast 8 characters with alphanumeric, special character and capital letters</string>
    <string name="verify_your_no">Verify your number</string>
    <string name="otpstatement">One Time Password(OTP) has been sent to your mobile, please enter the same value here to login</string>
    <string name="phoneno">Mobile no.</string>
    <string name="resend">Resend</string>
    <string name="enter_your_username">Please enter username</string>
    <string name="enter_your_email">Please enter your email</string>
    <string name="enter_your_correct_email">Incorrect Email</string>
    <string name="enter_your_mobileno">Please enter your mobile number</string>
    <string name="enter_atleast_your_mobileno">Please enter atleast nine digit mobile number</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="atleast_eight">Aleast 8 characters are required</string>
    <string name="enter_well_pattern">Enter 8 characters with atleast one number, one character and one special character</string>
    <string name="make_sure_you_enter_same_password">Please make sure you have entered the same password</string>
    <string name="enter_wallet_address">Please enter wallet address</string>
    <string name="enter_wallet_Private_key">Please enter private Key</string>
    <string name="enter_new_wallet_name">Please enter new wallet name</string>
    <string name="enter_from_address">Enter from address</string>
    <string name="enter_to_address">Enter to address</string>
    <string name="enter_elt_amount">Enter ELT Amount</string>
    <string name="send_again">You can send OTP again!</string>
    <string name="expire">OTP will expire in:</string>
    <string name="home">Home</string>
    <string name="wallets">Wallets</string>
    <string name="news">News</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="daily_limit">Your Daily Send Limit</string>
    <string name="weekly_limit">Your Weekly Send Limit</string>
    <string name="monthly_limit">Your Monthly Send Limit</string>
    <string name="elt">ELT</string>
    <string name="elt_performance">ELT Performance</string>
    <string name="one_month">1 month</string>
    <string name="three_months">3 months</string>
    <string name="six_months">6 months</string>
    <string name="noChartDataString">Chart loading :)</string>
    <string name="create_wallet">Create Wallet</string>
    <string name="import_wallet">Import Wallet</string>
    <string name="name_new_wallet">Name your new wallet</string>
    <string name="enter_wallet_name">Enter wallet name</string>
    <string name="create">Create</string>
    <string name="successful">Successful</string>
    <string name="new_wallet">Your new wallet has been created!</string>
    <string name="wallet_address">Wallet Address</string>
    <string name="private_key">Private Key</string>
    <string name="backed_up">Are you sure you have backed up your Private Key?</string>
    <string name="not_yet">Not Yet</string>
    <string name="yes_sure">Yes, I\'m sure</string>
    <string name="no_wallets">There are no wallets. Press "+" to create a wallet.</string>
    <string name="with_private_key">With Private Key</string>
    <string name="from_phone">From Phone</string>
    <string name="new_wallet_name">New Wallet Name</string>
    <string name="paste_wallet_address">Paste your Wallet Address here</string>
    <string name="paste_private_key">Paste your Wallet Private Key here</string>
    <string name="paste_new_wallet_name">Paste your new Import Wallet</string>
    <string name="import_">Import</string>
    <string name="daily_limits">Daily Limit : </string>
    <string name="weekly_limits">Weekly Limit : </string>
    <string name="monthly_limits">Monthly Limit : </string>
    <string name="rename_wallet">Rename Wallet</string>
    <string name="delete_wallet">Delete Wallet</string>
    <string name="delete_wallet_warning">Are you sure you want to delete wallet?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="receive">Receive</string>
    <string name="send">Send</string>
    <string name="save">Save</string>
    <string name="name_wallet">Name your wallet</string>
    <string name="rename_successfully">Wallet name changed successfully</string>
    <string name="wallet_transactions">Wallet Transactions</string>
    <string name="all">All</string>
    <string name="sent">Sent</string>
    <string name="received">Received</string>
    <string name="no_transactions">There are no transactions</string>
    <string name="there_is_no_elt">There is no ELT in this wallet kindly transfer some Elt into it</string>
    <string name="only_send_elt">Only Send ELT to this Address!</string>
    <string name="sending_any_other">Sending any other digital asset other than ELT will result in permanent loss.</string>
    <string name="copy_address">Copy Address</string>
    <string name="close">Close</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="paste_receiver">Paste receiver\'s wallet address here</string>
    <string name="elt_amount">ELT Amount</string>
    <string name="usd_amount">USD Amount</string>
    <string name="eg_100">E.g. : 100.00</string>
    <string name="max"><u>Max</u></string>
    <string name="gas_price">Gas Price</string>
    <string name="i_acknowledge">I acknowledge that a transaction fee of 0.000021 ELT will be applied during transfer.</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="please_accept">Please accept terms &amp; conditions</string>
    <string name="clear">Clear</string>
    <string name="passcode_sent">Passcode has been sent to your registered email address, Please check your email.</string>
    <string name="successfully_sent">Successfully sent</string>
    <string name="transaction_details">Transaction Details</string>
    <string name="tx_hash">TxHash</string>
    <string name="tx_receipt_status">Txreceipt Status</string>
    <string name="block_height">Block Height</string>
    <string name="time_stamp">Time Stamp</string>
    <string name="value">Value</string>
    <string name="gas_limit">Gas Limit</string>
    <string name="gas_used_by_ten">Gas Used By Ten</string>
    <string name="nonce">Nonce</string>
    <string name="input_data">Input Data</string>
    <string name="no_notifications">There are no notifictions</string>
    <string name="you_have_received">You have received </string>
    <string name="you_have_sent">You have sent </string>
    <string name="you_have_created">You have created a new wallet </string>
    <string name="your_transaction_of">Your transaction of </string>
    <string name="is_failed_to">is failed to</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure_clear_notification">Are you sure you want to clear this notification?</string>
    <string name="transaction_failed">Transaction Failed</string>
    <string name="start_verification">Start Verification</string>
    <string name="government_regulations">Government regulations require us to know more about you.</string>
    <string name="full_legal_name">Full Legal Name</string>
    <string name="proof_of_id">Proof of ID</string>
    <string name="proof_of_residence">Proof of Residence</string>
    <string name="enter_your_full_legal">Enter your full legal name as shown on your ID.</string>
    <string name="next">Next</string>
    <string name="select_type_of_document">Select the type of document you wish to scan.</string>
    <string name="malaysia_has_been_selected"><b>Malaysia</b> has been selected as issuing country of your documents. <u><b>Change country.</b></u></string>
    <string name="passport">Passport</string>
    <string name="driving_license">Driving License</string>
    <string name="identity_card">Identity Card</string>
    <string name="upoading_your_documents">Uploading your documents</string>
    <string name="this_should_only_take">This should only take a couple of seconds, depending on your network connectivity.</string>
    <string name="documents_successfully">Documents successfully submitted!</string>
    <string name="thank_you_kyc">Thank you! We will notify you once your verification is complete in 2-3 business day.</string>
    <string name="finished">Finished</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="response_null">Response Null</string>
    <string name="logout">Logout</string>
    <string name="or">OR</string>
    <string name="important">Important:</string>
    <string name="important_note">Please backup and keep your Private key safely, it cannot be recovered if you lose it.\nDo not share it to anyone else, your funds will be stolen if you exposed it to the public.</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_fromlib">Choose from Library</string>
    <string name="add_photo">Add Photo!</string>
    <string name="update">Update</string>
    <string name="profile_updated_successfully">Profile updated successfully</string>
    <string name="enter_oldPwd">Enter your old password</string>
    <string name="enter_newPwd">Enter your new  password</string>
    <string name="enter_cPwd">Enter your confirm  password</string>
    <string name="atleastEight">Atleast 8 characters are required</string>
    <string name="create_secure_pin">Create Secure Pin</string>
    <string name="change_secure_pin">Change Secure Pin</string>
    <string name="set_your_secure_pin">Set your secure pin</string>
    <string name="secure_pin_length">Secure Pin should be 4 digits in length</string>
    <string name="enter_secure_pin">Enter Secure Pin</string>
    <string name="confirm_secure_pin">Enter Confirm Secure Pin</string>
    <string name="enter_current_secure_pin">Enter Current Secure Pin</string>
    <string name="enter_new_secure_pin">Enter New Secure Pin</string>
    <string name="confirm_new_secure_pin">Enter Confirm New Secure Pin</string>
    <string name="make_sure_you_enter_same_pin">Please make sure you have entered the same pin</string>
    <string name="secure_pin_msg">You have already used this secure pin earlier, please try another one</string>
    <string name="account_security">Account Security</string>
    <string name="login_with_secure_pin">Login with Secure Pin</string>
    <string name="login_with_face_id_touch_id">Login with Face ID / Touch ID</string>
    <string name="change_password">Change Password</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="identity_verification">Identity Verification</string>
    <string name="success">Success</string>
    <string name="choose_language">Choose Language</string>
    <string name="english">English</string>
    <string name="chinese">Chinese</string>
</resources>