<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@drawable/rounded_solid_primary">

    <TextView
        android:padding="5dp"
        android:id="@+id/text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/choose_language"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textColor="@android:color/white" />


    <RelativeLayout
        android:id="@+id/lang_option"
        android:layout_below="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <RadioGroup
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="70dp">
            <RadioButton
                android:buttonTint="@color/white"
                android:checked="true"
                android:id="@+id/radio_eng"
                android:textColor="@color/white"
                android:text="@string/english"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <RadioButton
                android:buttonTint="@color/white"
                android:id="@+id/radio_chin"
                android:textColor="@color/white"
                android:text="@string/chinese"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RadioGroup>

    </RelativeLayout>




    <View
        android:layout_below="@+id/lang_option"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"/>

    <RelativeLayout
        android:id="@+id/rl_ok"
        android:layout_below="@+id/lang_option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="@color/white"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:layout_centerHorizontal="true"
            android:text="@string/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />




    </RelativeLayout>










</RelativeLayout>